# Dbd_alike

./: .gitignore  .mcp.json  AGENT.md  CLAUDE.md  CMakeLists.txt  Optimise.md  README.md  TODO.md  pr.md
.claude/: settings.local.json
.github/skills/3d-animation-gameplay/: SKILL.md
.github/skills/3d-modeling-coach-lowpoly/: SKILL.md
.github/skills/3d-modeling-professional/: SKILL.md
assets/addons/: bandage_roll.json  high_capacity_cell.json  serrated_jaws.json  surgical_tape.json  tighter_springs.json  wide_lens.json  wire_spool.json
assets/audio/: README.md
assets/characters/killers/: killer_hillbilly.json  killer_huntress.json  killer_nurse.json  killer_trapper.json  killer_wraith.json
assets/characters/survivors/: survivor_dwight.json  survivor_female_blocky.json  survivor_male_blocky.json  survivor_meg.json
assets/environments/: default_environment.json
assets/fx/: blood_puddle.json  blood_spray.json  chase_aura.json  dust_puff.json  generator_sparks_loop.json  hit_spark.json  scratch_mark_trail.json  scratches_profile.json
assets/items/: flashlight.json  map.json  medkit.json  toolbox.json
assets/loops/: L_wall_pallet_A.json  L_wall_pallet_B.json  L_wall_window_A.json  L_wall_window_B.json  L_wall_window_C.json  TL_LOOP.json  T_walls_A.json  T_walls_B.json  T_walls_C.json  __quick_loop_wall.json  debris_pile_A.json  debris_pile_B.json  gym_box_A.json  gym_box_B.json  long_wall_A.json  long_wall_B.json  plank_L_wall.json  plank_T_wall.json  plank_single.json  plank_wall.json  plank_wall_left_end.json  plank_wall_right_end.json  plank_wall_simple.json  plank_wall_simple_new.json  plank_wall_with_sides.json  plank_window_frame.json  plank_window_new.json  short_wall_A.json  short_wall_B.json  window.json
assets/maps/: map_v2.json  new_map.json  test_loop_elements.json
assets/materials/: metal.json  test.json
assets/meshes/: dead_by_daylight_-_the_shape.glb.meta.json  survivor_dwight.glb  survivor_female_blocky.glb  survivor_male_blocky.glb
assets/meshes/items/: flashlight.glb  map.glb  medkit.glb  toolbox.glb
assets/meshes/loop_elements/: L wall.glb  T wall.glb  Wall left end.glb  Wall right end.glb  Wall.glb  Wall_Simple.glb  Window.glb
assets/powers/: bear_trap.json  chainsaw_sprint.json  hatchet_throw.json  nurse_blink.json  wraith_cloak.json
assets/prefabs/: dead_by_daylight_-_the_shape.glb.meta.json
assets/terror_radius/: default_killer.json
assets/ui/screens/: in_game_hud.ui.json  main_menu.ui.json  settings.ui.json
assets/ui/styles/: base.ui.css.json  theme_default.tokens.json
config/: animation.json  assets.json  perks.json  powers_tuning.json  status_effects.json
docs/: CLAUDE_NOTES.md  CONSOLE_COMMANDS.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  TRACE.md  WRAITH_CLOAK.md  architecture.md
engine/animation/: AnimationBlender.cpp  AnimationBlender.hpp  AnimationClip.cpp  AnimationClip.hpp  AnimationPlayer.cpp  AnimationPlayer.hpp  AnimationStateMachine.cpp  AnimationStateMachine.hpp  AnimationSystem.cpp  AnimationSystem.hpp
engine/assets/: AssetRegistry.cpp  AssetRegistry.hpp  AsyncAssetLoader.cpp  AsyncAssetLoader.hpp  MeshLibrary.cpp  MeshLibrary.hpp
engine/audio/: AudioSystem.cpp  AudioSystem.hpp
engine/core/: App.cpp  App.hpp  EventBus.cpp  EventBus.hpp  JobSystem.cpp  JobSystem.hpp  Profiler.cpp  Profiler.hpp  Time.cpp  Time.hpp
engine/fx/: FxSystem.cpp  FxSystem.hpp
engine/net/: LanDiscovery.cpp  LanDiscovery.hpp  NetworkSession.cpp  NetworkSession.hpp
engine/physics/: ColliderGen_WallBoxes.cpp  ColliderGen_WallBoxes.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
engine/platform/: ActionBindings.cpp  ActionBindings.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
engine/render/: Frustum.cpp  Frustum.hpp  RenderThread.cpp  RenderThread.hpp  Renderer.cpp  Renderer.hpp  SceneCaptureFBO.cpp  SceneCaptureFBO.hpp  StaticBatcher.cpp  StaticBatcher.hpp  WraithCloakRenderer.cpp  WraithCloakRenderer.hpp
engine/scene/: Components.hpp  World.cpp  World.hpp
engine/ui/: ProfilerOverlay.cpp  ProfilerOverlay.hpp  UiAnimation.cpp  UiAnimation.hpp  UiNode.hpp  UiSerialization.cpp  UiSerialization.hpp  UiStyle.cpp  UiStyle.hpp  UiStyleSheet.cpp  UiStyleSheet.hpp  UiSystem.cpp  UiSystem.hpp  UiTree.cpp  UiTree.hpp
game/editor/: LevelAssets.cpp  LevelAssets.hpp  LevelEditor.cpp  LevelEditor.hpp
game/gameplay/: GameplaySystems.cpp  GameplaySystems.hpp  LoadoutSystem.cpp  LoadoutSystem.hpp  PerkSystem.cpp  PerkSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp  StatusEffect.hpp  StatusEffectManager.cpp  StatusEffectManager.hpp
game/maps/: TileGenerator.cpp  TileGenerator.hpp
game/ui/: GeneratorProgressBar.cpp  GeneratorProgressBar.hpp  LoadingManager.cpp  LoadingManager.hpp  LoadingScreen.cpp  LoadingScreen.hpp  LobbyScene.cpp  LobbyScene.cpp.bak  LobbyScene.hpp  LobbyScene.hpp.bak  PerkLoadoutEditor.cpp  PerkLoadoutEditor.hpp  ScreenEffects.cpp  ScreenEffects.hpp  SkillCheckWheel.cpp  SkillCheckWheel.hpp
scripts/: create_medkit.py  create_medkit_bake.py
src/: main.cpp
tools/: generate_item_models.py  generate_loop_jsons.py  generate_map_v2.py  generate_medkit.py
tools/blender/: BLENDER_ASSET_RULES.md  generate_batch.ps1  run_blender.ps1
ui/: DeveloperConsole.cpp  DeveloperConsole.hpp  DeveloperToolbar.cpp  DeveloperToolbar.hpp  theme.json
ui/editor/: UiEditor.cpp  UiEditor.hpp
ui/layouts/: hud.json
(+24 files in other folders)
